--- a/elasticsearch/eck-simple-cluster.yaml
+++ b/elasticsearch/eck-simple-cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  name: quickstart
+  name: first-cluster
 spec:
   version: 8.13.4
   nodeSets:
