--- a/elasticsearch/argocd-app.yaml
+++ b/elasticsearch/argocd-app.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/argoproj.io/application_v1alpha1.json
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -6,9 +7,10 @@ metadata:
 spec:
   project: default
   source:
+    chart: elasticsearch-helm
     repoURL: "https://github.com/JulienDanh/argo-resharding.git"
     targetRevision: HEAD
-    path: elasticsearch
+    path: elasticsearch-helm
   destination:
     server: "https://kubernetes.default.svc"
     namespace: elastic-system
