--- a/charts/elasticsearch/values.yaml
+++ b/charts/elasticsearch/values.yaml
@@ -1,11 +1,5 @@
 clusters:
-  - first-cluster
-  - second-cluster
-  - third-cluster
-  - fourth-cluster
-  - fifth-cluster
-  - sixth-cluster
-  - seventh-cluster
-  - eighth-cluster
-  - ninth-cluster
-  - tenth-cluster
+  - cell-00001
+  - cell-00002
+  - cell-00003
+  - cell-00004
