--- a/argocd-apps/es-config-app.yaml
+++ b/argocd-apps/es-config-app.yaml
@@ -14,7 +14,7 @@ spec:
     path: charts/es-config
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: config-app
+    namespace: es-config
   syncPolicy:
     automated:
       prune: true
