--- a/charts/es-config/values.yaml
+++ b/charts/es-config/values.yaml
@@ -7,17 +7,17 @@ clusters:
     configName: cell-00003.json
 
 reshardings:
-  - name: c1.conversations
+  - name: cell-00001
     sourceIndex: cell-00001.conversations_pages
     targetIndex: cell-00001.conversations_pages-no_routing
     status: NOT_STARTED
     step: REINDEXING
-  - name: cell-00002.activities
+  - name: cell-00002
     sourceIndex: cell-00002.activities
     targetIndex: cell-00002.activities-no_routing
     status: NOT_STARTED
     step: ALIAS_SWAP
-  - name: cell-00003.activities
+  - name: cell-00003
     sourceIndex: cell-00003.activities
     targetIndex: cell-00003.activities-no_routing
     status: NOT_STARTED
