--- a/charts/es-config/templates/operator-rbac.yaml
+++ b/charts/es-config/templates/operator-rbac.yaml
@@ -1,23 +1,21 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: es-config-resharding-operator
-  namespace: es-config
 rules:
   - apiGroups: ["elasticsearch.example.com"]
     resources: ["reshardings"]
     verbs: ["get", "list", "watch", "patch", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: es-config-resharding-operator
-  namespace: es-config
 subjects:
   - kind: ServiceAccount
     name: default
     namespace: es-config
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: es-config-resharding-operator
   apiGroup: rbac.authorization.k8s.io 
