--- a/charts/es-config/templates/operator-deployment.yaml
+++ b/charts/es-config/templates/operator-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: es-config-resharding-operator
-  namespace: es-config
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
   selector:
