--- a/charts/es-config/templates/configmap.yaml
+++ b/charts/es-config/templates/configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ $.Values.namespace }}
 data:
   {{ .configName }}: |
     {
