--- a/charts/es-config/crds/resharding.yaml
+++ b/charts/es-config/crds/resharding.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: reshardings.elasticsearch.example.com
+  name: reshardings.front.search.com
 spec:
   group: front.search.com
   names:
