--- a/charts/es-config/templates/operator-rbac.yaml
+++ b/charts/es-config/templates/operator-rbac.yaml
@@ -4,9 +4,9 @@ metadata:
   name: operator-role
   namespace: {{ .Values.namespace }} 
 rules:
-- apiGroups: ["front.search.com"]
-  resources: ["reshardings"] # Plural name of your custom resource
+- apiGroups: [{{ .Values.apiGroup }}]
+  resources: ["reshardings"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-- apiGroups: [""] # For core Kubernetes resources like Pods, Services, etc.
-  resources: ["pods", "services"] # Example: if your operator also manages pods or services
+- apiGroups: [""]
+  resources: ["pods", "services"]
   verbs: ["get", "list", "watch"]
