--- a/charts/es-config/templates/operator-role-binding.yaml
+++ b/charts/es-config/templates/operator-role-binding.yaml
@@ -9,5 +9,5 @@ subjects:
   namespace: {{ .Values.namespace }}
 roleRef:
   kind: Role
-  name: my-operator-role
+  name: operator-role
   apiGroup: rbac.authorization.k8s.io
