--- a/charts/es-config/values.yaml
+++ b/charts/es-config/values.yaml
@@ -25,3 +25,7 @@ reshardings:
 
 namespace: es-config
 apiGroup: front.search.com
+
+# Operator
+operatorRole: operator-role
+operatorServiceAccount: operator-sa
