--- a/charts/es-config/templates/operator-role-binding.yaml
+++ b/charts/es-config/templates/operator-role-binding.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: {{ .Values.namespace }}
 subjects:
 - kind: ServiceAccount
-  name: operator-sa
+  name: {{ .Values.operatorServiceAccount }}
   namespace: {{ .Values.namespace }}
 roleRef:
   kind: Role
-  name: operator-role
+  name: {{ .Values.operatorRole }}
   apiGroup: rbac.authorization.k8s.io
