--- a/charts/es-config/templates/operator-role.yaml
+++ b/charts/es-config/templates/operator-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: operator-role
+  name: {{ .Values.operatorRole }}
   namespace: {{ .Values.namespace }} 
 rules:
 - apiGroups: [{{ .Values.apiGroup }}]
