--- a/charts/es-config/templates/operator-service-account.yaml
+++ b/charts/es-config/templates/operator-service-account.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: my-operator-sa
+  name: {{ .Values.operatorServiceAccount }}
   namespace: {{ .Values.namespace }}
