--- a/charts/es-config/templates/operator-role.yaml
+++ b/charts/es-config/templates/operator-role.yaml
@@ -10,3 +10,6 @@ rules:
 - apiGroups: [""]
   resources: ["pods", "services"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["apiextensions.k8s.io"]
+  resources: ["customresourcedefinitions"]
+  verbs: ["get", "list", "watch"]
