--- a/charts/es-config/values.yaml
+++ b/charts/es-config/values.yaml
@@ -11,7 +11,7 @@ reshardings:
     sourceIndex: cell-00001.conversations_pages
     targetIndex: cell-00001.conversations_pages-no_routing
     status: NOT_STARTED
-    step: REINDEXING
+    step: ALIAS_SWAP
   - name: cell-00002
     sourceIndex: cell-00002.activities
     targetIndex: cell-00002.activities-no_routing
