--- a/charts/es-config/templates/resharding-job.yaml
+++ b/charts/es-config/templates/resharding-job.yaml
@@ -1,30 +1,25 @@
 {{- range .Values.reshardings }}
-  apiVersion: batch/v1
-  kind: Job
-  metadata:
-    name: {{ .name }}-reindexing-job
-  spec:
-    template:
-      metadata:
-        labels:
-          name: {{ .name }}
-          namespace: {{ $.namespace }}
-      spec:
-        restartPolicy: OnFailure
-        containers:
-          - name: resharding
-            image: busybox 
-  {{- if eq .step "REINDEXING" }}
-            command: ["sh", "-c", "echo 'Performing reindexing from {{ .sourceIndex }} to {{ .targetIndex }}...'; sleep 10; echo 'Resharding done.'"]
-  {{- else if eq .step "ALIAS_SWAP" }}
-            command: ["sh", "-c", "echo 'Performing alias swap from {{ .sourceIndex }} to {{ .targetIndex }}...'; sleep 10; echo 'Resharding done.'"]
-  {{- end }}
-
-            env:
-              - name: SOURCE_INDEX
-                value: "{{ .sourceIndex }}"
-              - name: TARGET_INDEX
-                value: "{{ .targetIndex }}"
-    backoffLimit: 4
-  ---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ .name }}-job
+spec:
+  template:
+    metadata:
+      labels:
+        name: {{ .name }}
+        namespace: {{ $.namespace }}
+    spec:
+      restartPolicy: OnFailure
+      containers:
+        - name: resharding
+          image: busybox 
+          command: ["sh", "-c", "echo 'Performing resharding from {{ .sourceIndex }} to {{ .targetIndex }}...'; sleep 10; echo 'Resharding done.'"]
+          env:
+            - name: SOURCE_INDEX
+              value: "{{ .sourceIndex }}"
+            - name: TARGET_INDEX
+              value: "{{ .targetIndex }}"
+  backoffLimit: 4
+---
 {{- end }}
