--- a/charts/es-config/templates/resharding-job.yaml
+++ b/charts/es-config/templates/resharding-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .name }}-{{ .step }}-job
+  name: {{ .name }}-job
 spec:
   template:
     metadata:
