--- a/charts/es-config/templates/indices.yaml
+++ b/charts/es-config/templates/indices.yaml
@@ -5,9 +5,6 @@ metadata:
   name: {{ .name }}
   namespace: {{ $.Values.namespace }}
 data:
-  {{ .configName }}: |
-    {
-      "key": "{{ .name }}",
-    }
+  {{ .configName }}: {{ toJson $.Values.conversations_pages }}
 ---
 {{- end }}
