--- a/charts/es-config/templates/indices.yaml
+++ b/charts/es-config/templates/indices.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .name }}
+  name: {{$.env}}-{{ . }}-indices
   namespace: {{ $.Values.namespace }}
 data:
   {{ $.env }}-{{ . }}-conversations_pages02: | 
