--- a/charts/es-config/templates/operator-role.yaml
+++ b/charts/es-config/templates/operator-role.yaml
@@ -13,3 +13,6 @@ rules:
 - apiGroups: ["apiextensions.k8s.io"]
   resources: ["customresourcedefinitions"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["batch"]
+  resources: ["jobs"]
+  verbs: ["create", "get", "list", "watch", "delete"]
