--- a/charts/es-config/values.yaml
+++ b/charts/es-config/values.yaml
@@ -14,7 +14,7 @@ reshardings:
   - name: cell-00005
     sourceIndex: cell-00003.activities
     targetIndex: cell-00003.activities-no_routing
-  - name: my-resharding
+  - name: my-reshardingx
     sourceIndex: cell-00001.conversations_pages
     targetIndex: cell-00001.conversations_pages-no_routing
 
