--- a/charts/es-config/values.yaml
+++ b/charts/es-config/values.yaml
@@ -1,5 +1,5 @@
 reshardings:
-  - name: cell-00001
+  - name: cell-00001-conversations
     sourceIndex: cell-00001.conversations_pages
     targetIndex: cell-00001.conversations_pages-no_routing
   - name: cell-00002
